--- a/week3assign/css/style.css
+++ b/week3assign/css/style.css
@@ -4,22 +4,34 @@
 body{
   margin: 0; 
   padding: 0; 
+  background-color: lightgrey; 
 }
 
 .navbar{
   background-color: #BEAFAF !important;
 }
+.navbar-brand{
+  font-size: 2rem; 
+}
+.navbar-nav{
+  font-size: 1.2rem; 
+}
 .navbar-toggler-icon{
   color: black; 
 }
-.para{
+.content{
   background-color: #E8DDDD !important; 
   min-height: 1000px; 
+  padding: 30px; 
+  box-shadow: 0 0 25px grey; 
 }
 .para h3{
   color: black; 
 }
 
 @media screen and  (max-width:576px ) {
-  
+  .content{
+    margin: 0 auto; 
+
+  }
 }
