--- a/samarth/css/style.css
+++ b/samarth/css/style.css
@@ -3,6 +3,7 @@ body,html{
 	padding: 0; 
 	box-sizing: border-box; 
 	overflow-x: hidden; 
+	scroll-behavior: smooth; 
 }
 .stand-out{
 	color: #14B3DC; 
@@ -67,6 +68,34 @@ body,html{
 
 
 /* carousel styling  */
+
+.image1{
+	background-image: url("../img/bg2.jpg");
+	background-position: center; 
+	background-repeat: no-repeat;
+	background-size: cover; 
+	background-attachment: fixed; 
+	height: 100vh; 
+
+}
+.image2{
+	background-image: url("../img/bg3.jpg");
+	background-position: center; 
+	background-repeat: no-repeat;
+	background-attachment: fixed; 
+	height: 100vh; 
+
+
+}
+.image3{
+	background-image: url("../img/bg4.jpg");
+	background-position: center; 
+	background-repeat: no-repeat;
+	background-attachment: fixed; 
+	height: 100vh; 
+
+
+}
 
 #my-slider{
 	height: 100vh; 
@@ -162,6 +191,9 @@ body,html{
 /* products ends */
 
 /* features section */
+.features{
+	background: linear-gradient(162deg, #06beb6 10%,white 50%);
+}
 
 .features h2{font-size: 2.5rem; }
 
@@ -171,14 +203,31 @@ body,html{
 	margin: 20px 0 20px 0; 
 	margin-left: 0; 
 	margin-right: 0; 
-	min-height:  147.6px; 
+	background-color: white; 
 }
 .feature-title{
-	background-color: #F9AAAA;
+	background-color: #06beb6;
 	padding: 5px; 
 }
 .feature-description{
 	font-weight: bold; 
+}
+
+/* new feature properties */
+#feature-carousel{
+	min-height: 300px; 
+}
+
+#feature-carousel .carousel-indicators li{
+	background-color: #06beb6 
+}
+#feature-carousel .carousel-control-prev-icon{
+	background-color: #06beb6 !important; 
+	box-shadow: 0px 10px 20px black; 
+}
+#feature-carousel .carousel-control-next-icon{
+	background-color: #06beb6 !important; 
+	box-shadow: 0px 10px 20px black; 
 }
 
 
@@ -188,8 +237,15 @@ body,html{
 /* testimonial section; */
 
 .testimonial{
-	background-image:  linear-gradient(45deg,rgba(246, 166, 190,1),rgba(246, 166, 190,0.8),rgba(246, 166, 190,0.5),rgba(246, 166, 190,0.2)); 
+	/* background-image:  linear-gradient(45deg,rgba(246, 166, 190,1),rgba(246, 166, 190,0.8),rgba(246, 166, 190,0.5),rgba(246, 166, 190,0.2));  */
+	background: linear-gradient(50deg,#000428 20%,#182E56 20% 40%,#165388 40% 60%,#24748E 60% 80%,#06beb6 80% 100%,white 0% 100%); 
 	padding: 50px; 
+	transition: all 0.5s ease-in; 
+}
+
+.blob{
+	text-shadow: 0px 10px 20px black !important; 
+	color: #C3C2C2;
 }
 
 .testimonial-card{
@@ -197,27 +253,57 @@ body,html{
 	padding: 20px; 
 	border-bottom-right-radius: 50px; 
 	border-top-left-radius: 50px; 
+	box-shadow: 0px 10px 30px black; 
 }
 .test-image{
 	border-radius: 50%; 
 	margin-bottom: 20px; 
 }
 #t-slider .carousel-indicators li{
-	background-color: #51A7E9 
+	background-color: #06beb6 
 }
 #t-slider .carousel-control-prev-icon{
-	background-color: #F49AE2 !important; 
+	background-color: #06beb6 !important; 
+	box-shadow: 0px 10px 30px black; 
 }
 #t-slider .carousel-control-next-icon{
-	background-color: #F49AE2 !important; 
+	background-color: #06beb6 !important; 
+	box-shadow: 0px 10px 30px black; 
 }
 /* testimonial section */
+
+
+
+/* make in india section  */
+
+.make-in-india{
+	background: linear-gradient(45deg,rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.3)),url('../img/india1.jpg');
+	background-repeat: no-repeat; 
+	background-position: center; 
+	background-size: cover; 
+	background-attachment: fixed; 	
+}
+.make-in-india-header{
+	font-weight: bold; 
+	text-shadow: 0px 10px 20px black; 
+}
+.make-in-india-image{
+	box-shadow: 0px 10px 30px black; 
+	border-radius: 3%;
+
+}
+.make-in-india-para{
+	font-size: 1.2rem; 
+	text-shadow: 0px 10px 15px black; 
+}
+
+/* make in india section ends */
 
 
 /* footer section */
 
 .footer{
-	background-color: #095788;
+	background-color: black; 
 }
 .footer-quick-list a{
 	color: white; 
