--- a/samarth/css/style.css
+++ b/samarth/css/style.css
@@ -43,18 +43,30 @@ body,html{
 	transition: background 0.3s ease-in; 
 }
 
-.navbar-brand {
+.brand-image{
+	border-radius: 10%; 
+	vertical-align: middle; 
+	width: 70px; height: 70px; 
+	transition: all 0.2s; 
+}
+
+.brand-title {
 	letter-spacing: 3px; 
-	border: 3px solid white; 
+	/* border: 3px solid white;  */
 	border-radius: 5px; 
 	padding: 10px;  
 	font-weight: bold; 
+	font-size: 1.5rem; 
+	letter-spacing: 5px; 
 	transition: color .1s ease-in,border .1s ease-in; 
+	color: #FB0404; 
+	text-shadow: 0px 5px 5px black; 
+	/* vertical-align: middle;  */
 }
-.navbar-brand:hover{
+/* .navbar-brand:hover{
 	color: #14B3DC !important; 
 	border: 3px solid #14B3DC; 
-}
+} */
 
 .navbar-nav .nav-item .nav-link{
 	color: white;       
@@ -63,6 +75,18 @@ body,html{
 .inverse{
 	background-color: #468899 !important;  
 	box-shadow: 0 0 10px lightgrey; 
+	padding-top: 0; 
+	padding-bottom: 0; 
+	box-shadow: 0px 2px 5px black; 
+}
+.inverse-brand-title{
+	font-size: 1.1rem; 
+	letter-spacing: 5px; 
+}
+.inverse-brand-image{
+	box-shadow: 0 2px 10px black; 
+	width: 50px; 
+	height: 50px; 
 }
 
 
@@ -206,7 +230,7 @@ body,html{
 	background-color: white; 
 }
 .feature-title{
-	background-color: #06beb6;
+	background-color: #99E3E0;
 	padding: 5px; 
 }
 .feature-description{
